--- a/public/index.html
+++ b/public/index.html
@@ -10,34 +10,70 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <title>Learning</title>
+
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="%PUBLIC_URL%/assets/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/owl.carousel.css" />
+    <link
+      rel="stylesheet"
+      href="%PUBLIC_URL%/assets/css/owl.theme.default.min.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="%PUBLIC_URL%/assets/css/templatemo-style.css"
+    />
+    <!--  -->
+    <!--  -->
   </head>
-  <body>
+  <body
+    id="top"
+    data-spy="scroll"
+    data-target=".navbar-collapse"
+    data-offset="50"
+  >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+    <!--  -->
+    <!-- <script src="/node_modules/jquery/dist/jquery.js"></script>
+    <script src="/node_modules/owl.carousel/dist/owl.carousel.min.js"></script> -->
+    <!--  -->
+    <script src="%PUBLIC_URL%/assets/js/jquery.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/bootstrap.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/owl.carousel.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/smoothscroll.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/custom.js"></script>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <script>
+      $(document).ready(function () {
+        $(".owl-carousel").owlCarousel({
+          stagePadding: 50,
+          loop: true,
+          margin: 10,
+          responsiveClass: true,
+          responsive: {
+            0: {
+              items: 1,
+              nav: true,
+            },
+            600: {
+              items: 3,
+              nav: false,
+            },
+            1000: {
+              items: 5,
+              nav: true,
+              loop: false,
+            },
+          },
+        });
+      });
+    </script>
   </body>
 </html>
