--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>AJ Multimedia Institute</title>
+    <title>AJ Multimedia Education | IT Training Institute in Surat and Jaunpur</title>
 
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/bootstrap.min.css" />
     <link
