--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>
-      AJ Multimedia Education | IT Training Institute in Surat and Jaunpur
-    </title>
+    <title>AJ Multimedia Education | IT Training Institute in Surat and Jaunpur</title>
 
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/bootstrap.min.css" />
     <link
@@ -31,9 +29,12 @@
       rel="stylesheet"
       href="%PUBLIC_URL%/assets/css/templatemo-style.css"
     />
+    <!--  -->
+    <!--  -->
 
-    <!--  -->
-    <!--  -->
+    <style>
+      
+    </style>
   </head>
   <body
     id="top"
@@ -43,14 +44,9 @@
   >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-
     <div class="loader-container">
-    <section class="preloader">
-      <div class="spinner">
-        <span class="spinner-rotate"></span>
-      </div>
-    </section>
-  </div>
+      <div class="loader"></div>
+    </div>
     <!--  -->
     <!-- <script src="/node_modules/jquery/dist/jquery.js"></script>
     <script src="/node_modules/owl.carousel/dist/owl.carousel.min.js"></script> -->
